# practice2026AtaP

project/: CMakeLists.txt  admin.cpp  admin.h  doorder.cpp  doorder.h  doorder.ui  foradministrator.cpp  foradministrator.h  foradministrator.ui  loginpage.cpp  loginpage.h  loginpage.ui  logo.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  registerpage.cpp  registerpage.h  registerpage.ui  regularuser.cpp  regularuser.h  sessionmanager.cpp  sessionmanager.h  user.h
